--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Search for GitHub repositories and display their stats.">
+    <meta property="og:title" content="GitHub Repository Searching and Stats Display.">
+    <meta property="og:description" content="Search for GitHub repositories and display their stats.">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="GitHub Repository Searching and Stats Display">
+    <meta name="twitter:description" content="Search for GitHub repositories and display their stats.">
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github Repo Finder</title>
